sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: '=' expected but ';' found.
    if (ecart>1){
^